<resources>
    <!-- Application recources -->
    <string name="app_name">Restaurant</string>
    <string name="title_food">Food</string>
    <string name="title_cart">Shopping card</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>

    <!-- Authorization recources -->
    <string name="profile_signin">Sign in</string>
    <string name="profile_signup">Sign up</string>
    <string name="no_such_user">No such user!</string>
    <string name="very_short_password">Very short password!</string>

    <!-- Food recources -->
    <string name="total">Total:</string>
    <string name="food_weight_template">%1$s g</string>
    <string name="price_sum_template" translatable="false"> %1$d * %2$s ₽</string>
    <string name="price_template" translatable="false">%1$s ₽</string>
    <string name="add_food_to_cart_template">%1$s was added to your cart\n%2$s units</string>

    <!-- Cart recources -->
    <string name="pay_btn">pay</string>
    <string name="total_price_template" translatable="false">%1$s ₽</string>
    <string name="total_dollars_price_template" translatable="false">%1$s $</string>
    <string name="on_buy_toast_template">Bought for sum: %1$s ₽</string>
    <string name="on_empty_cart_toast">Empty cart</string>
    <string name="edit_address">change\naddress</string>
    <string name="delete_all">remove\nall</string>

    <!-- Profile resources -->
    <string name="profile_name">Aboba Abiba</string>
    <string name="profile_email">sobaka@yandex.ru</string>
    <string name="profile_edit_btn">Change</string>
    <string name="profile_exit_button">Exit</string>
    <string name="profile_photo_description">Profile photo</string>
    <string name="profile_edit_name">Name</string>
    <string name="profile_input_name">Input name</string>
    <string name="profile_edit_password">Password</string>
    <string name="profile_input_password">Input password</string>
    <string name="profile_edit_password_again">Replay password</string>
    <string name="profile_input_password_again">Input password again</string>
    <string name="profile_edit_email">Email</string>
    <string name="profile_input_email">Input email</string>
    <string name="profile_add_photo">Add photo</string>
    <string name="profile_save_editing">Save</string>
    <string name="profile_cancel_editing">Cancel</string>
    <string name="profile_edit">Edit profile</string>

    <!-- Common -->
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="invalid_data">Invalid or incomplete data!</string>
    <string name="invalid_name">Invalid username!</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="password_mismatch">Mismatch of passwords!</string>
    <string name="success">Success!</string>
    <string name="name_conflict">User with such username already exists!</string>
    <string name="email_conflict">User with such email already exists!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="payment">payment</string>
    <string name="gram">g</string>
    <string name="payment_card_name">card number</string>
    <string name="payment_card_example">XXXX XXXX XXXX XXXX</string>
    <string name="profile_card_holder_name">card holder</string>
    <string name="card_holder_example">John Doe</string>
    <string name="edit_expire_date">Expires in</string>
    <string name="edit_expire_date_example">2024</string>
    <string name="profile_edit_cvv">CVV</string>
    <string name="edit_cvv_example">420</string>
    <string name="profile_cancel_payment">cancel</string>
    <string name="title_payment">payment</string>
    <string name="orders_go_back">return</string>
    <string name="order_list">orders</string>
    <string name="title_orders">orders</string>
    <string name="cur_password_length">%1$d/20 (min length - 4)</string>
</resources>
