<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ChangeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            style="@style/HeadingTextMedium"
            android:id="@+id/text_profile"
            android:layout_width="305dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-15dp"
            android:text="@string/profile_edit"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/login_person_name"
            style="@style/HeadingTextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_name"
            android:layout_marginTop="40dp"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/login_input_person_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_change_profile_trait"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp"
            style="@style/MainTextLight"
            android:textColor="@color/neutral"
            android:hint="@string/profile_input_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_person_name" />

        <TextView
            android:id="@+id/textVie1w"
            style="@style/HeadingTextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/editTextTextPerson1Name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_change_profile_trait"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp"
            style="@style/MainTextLight"
            android:textColor="@color/neutral"
            android:hint="@string/profile_input_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_person_name" />

        <TextView
            android:id="@+id/textVie1w2"
            style="@style/HeadingTextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_password_again"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/editTextTextPersonNam3e"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_change_profile_trait"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp"
            style="@style/MainTextLight"
            android:textColor="@color/neutral"
            android:hint="@string/profile_input_password_again"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_person_name" />

        <TextView
            android:id="@+id/te2xtView"
            style="@style/HeadingTextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_email"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/editTextTex2tPersonName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_change_profile_trait"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp"
            style="@style/MainTextLight"
            android:textColor="@color/neutral"
            android:hint="@string/profile_input_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_person_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_photo"
            android:layout_height="wrap_content"
            android:text="@string/profile_add_photo"
            android:layout_marginTop="10dp"
            android:layout_width="190dp"
            android:backgroundTint="@color/primary_variant"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_profile"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_change_profile"
            android:text="@string/profile_edit_btn"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_profile"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_cancel_profile"
            android:text="@string/profile_cancel_editing"
            android:textColor="@color/black" />

    </LinearLayout>

</FrameLayout>
