<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.PaymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/payment"
            style="@style/HeadingTextMedium"
            android:layout_width="305dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-15dp"
            android:text="@string/payment"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/card_name"
            style="@style/HeadingTextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_card_name"
            android:layout_marginTop="40dp"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/edit_card_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_edit_profile_trait"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp"
            style="@style/MainTextLight"
            android:textColor="@color/black"
            android:hint="@string/payment_card_example"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <TextView
            android:id="@+id/edit_card_holder_name"
            style="@style/HeadingTextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_card_holder_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/edit_card_holder_name_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_edit_profile_trait"
            android:inputType="textVisiblePassword"
            android:paddingHorizontal="10dp"
            style="@style/MainTextLight"
            android:textColor="@color/black"
            android:hint="@string/card_holder_example"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_expire_date"
                style="@style/HeadingTextBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_expire_date"
                android:layout_marginTop="10dp"
                android:layout_marginStart="6dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/edit_expire_date_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/btn_edit_profile_trait"
                android:inputType="textVisiblePassword"
                android:paddingHorizontal="10dp"
                style="@style/MainTextLight"
                android:textColor="@color/black"
                android:hint="@string/edit_expire_date_example"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_password_again" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_cvv"
                style="@style/HeadingTextBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_edit_cvv"
                android:layout_marginTop="10dp"
                android:layout_marginStart="6dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/edit_cvv_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/btn_edit_profile_trait"
                android:inputType="textVisiblePassword"
                android:paddingHorizontal="10dp"
                style="@style/MainTextLight"
                android:textColor="@color/black"
                android:hint="@string/edit_cvv_example"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_password_again" />

        </LinearLayout>

    </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pay"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_edit_profile"
            android:text="@string/pay_btn"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_payment"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_cancel_profile"
            android:text="@string/profile_cancel_payment"
            android:textColor="@color/black" />

    </LinearLayout>

</FrameLayout>
